--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@marp-team/marp-cli": "^3.0.2",
     "@types/node": "^20.3.2",
+    "@types/prompts": "^2.4.4",
     "@types/turndown": "^5.0.1",
+    "prompts": "^2.4.2",
     "typescript": "^5.1.6"
   }
 }
