--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "save": "ts-node save.ts"
+    "save": "ts-node save.ts",
+    "new-config": "ts-node scripts/new-config.ts"
   },
   "dependencies": {
     "axios": "^1.4.0",
